--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-shop",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "https://e-material-shop-app.herokuapp.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
